[package]
name = "gdpr_consent"
version = "0.1.1"
authors = ["Tim Cheeseman <tcheeseman@appnexus.com>"]
description = "GDPR Transparency and Consent Framework SDK for Rust"
keywords = ["GDPR", "consent"]
categories = ["encoding"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/gdpr_consent/"
homepage = "https://cirla.github.io/gdpr_consent"
repository = "https://github.com/cirla/gdpr_consent"

[badges]
travis-ci = { repository = "cirla/gdpr_consent" }
appveyor = { repository = "cirla/gdpr_consent" }

[lib]
name = "gdpr_consent"

[dependencies]
base64 = "0.9"
bitstream-io = "0.6"
bit-set = "0.5"
bit-vec = "0.5"
